@@ -113,16 +113,6 @@
 		<ant antfile="${src.bin.dir}/build-junit.xml" target="test-fail" dir="" />
 	</target>
 
-	<target name="recache">
-		<java jar="${dist.build.dir}/eSciDocCoreAdmin.jar" fork="true">
-			<jvmarg value="-Xmx1024m" />
-			<jvmarg value="-Xms512m" />
-			<jvmarg value="-XX:MaxPermSize=1024m" />
-			<arg value="recache" />
-		</java>
-	</target>
-
-
 	<!-- 
 		Compute build.version properties (which contains version number 
 		and/or build number).
